# timed-camera

./: CMakeLists.txt  main.cpp
